--- a/supervised_learning/ADABoosting.ipynb
+++ b/supervised_learning/ADABoosting.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AdaBoost: Classifying Heart Disease or No Heart Disease\n",
+    "\n",
+    "## What is AdaBoost?\n",
+    "\n",
+    "**AdaBoost** (short for Adaptive Boosting) is a machine learning method that combines many small, simple models—called weak learners—to create a stronger, more accurate model. It works by training each new model to focus on the examples that the previous ones got wrong. Over time, the model improves by paying more attention to the “harder” cases. It’s like having a team of tutors, where each one focuses on fixing the mistakes the others made."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,6 +27,27 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import AdaBoostClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Our Task\n",
+    "We will be predicting the occurrence of heart disease in patients using **AdaBoost** technique.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Load and Preprocess the Hearts Dataset\n",
+    "We will use the `hearts` dataset and classify a patient as either **Has Heart Disease**(label=1) or **Does not have Heart Disease**(label=0)\n",
+    "\n",
+    "We'll also drop any rows with missing values.\n",
+    "\n",
+    "## Normalize and Prepare Features\n",
+    "Logistic regression works best when the input features are on a similar scale. We'll normalize the features to have mean 0 and standard deviation 1."
    ]
   },
   {
@@ -87,6 +119,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Features Selection\n",
+    "To better understand why we selected these specific features for classification, read the **Perceptron_hearts** file.\n",
+    "\n",
+    "We'll select the \"Age\", \"Oldpeak\", \"MaxHR\", \"ST_Slope\", \"ExerciseAngina\", \"Sex\",\"ChestPainType\",\"Cholesterol\", and \"FastingBS\" for classification."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -101,6 +143,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting Data into Training and Test Sets\n",
+    "\n",
+    "We split our dataset into training and testing sets to evaluate model performance later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -108,6 +159,16 @@
    "source": [
     "#Split data into test and trainung data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AdaBoost Implementation\n",
+    "We will implement the **AdaBoost** technique using the **AdaBoostClassifier** from the **sklearn.ensemble** module\n",
+    "\n",
+    "Here we train our model and predict using the test values"
    ]
   },
   {
@@ -127,6 +188,13 @@
     "\n",
     "# Make predictions\n",
     "ada_y_pred = ada_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Importance in Patient Classification"
    ]
   },
   {
@@ -171,6 +239,15 @@
     "plt.xlabel('Importance')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate the Model Accuracy\n",
+    "\n",
+    "Here we plot a confusion matrix and give a classification report on the model."
    ]
   },
   {
@@ -223,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +335,7 @@
     "\n",
     "plt.xlabel(top_features[0])\n",
     "plt.ylabel(top_features[1])\n",
-    "plt.title('Actual Player Classes')\n",
+    "plt.title('Actual Occurrences of Heart Disease in Patients')\n",
     "plt.legend()\n",
     "\n",
     "# Second subplot - Predicted classes\n",
@@ -276,7 +353,7 @@
     "\n",
     "plt.xlabel(top_features[0])\n",
     "plt.ylabel(top_features[1])\n",
-    "plt.title('Predicted Occurrences o Heart Disease in Patients')\n",
+    "plt.title('Predicted Occurrences of Heart Disease in Patients')\n",
     "plt.legend()\n",
     "\n",
     "plt.tight_layout()\n",
