--- a/supervised_learning/ADABoosting_regression.ipynb
+++ b/supervised_learning/ADABoosting_regression.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AdaBoost Regression: Predicting the Occurrences of Heart Disease in Patients\n",
+    "\n",
+    "## What is AdaBoost Regression?\n",
+    "\n",
+    "**AdaBoost Regression** is a version of AdaBoost used to predict numbers instead of categories. It combines several weak models (usually small decision trees) to make better predictions. Each new model focuses more on the predictions that were far off, trying to fix the big mistakes made by earlier models. In the end, all the models work together to give a final, more accurate result—like a group of guessers learning from each other’s errors to make a smarter guess."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -19,6 +30,27 @@
     "\n",
     "# Set the Seaborn theme\n",
     "sns.set_theme()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Our Task\n",
+    "We will be predicting the occurrence of heart disease in patients using **AdaBoost Regression** technique.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Load and Preprocess the Hearts Dataset\n",
+    "We will use the `hearts` dataset and classify a patient as either **Has Heart Disease**(label=1) or **Does not have Heart Disease**(label=0)\n",
+    "\n",
+    "We'll also drop any rows with missing values.\n",
+    "\n",
+    "## Normalize and Prepare Features\n",
+    "Logistic regression works best when the input features are on a similar scale. We'll normalize the features to have mean 0 and standard deviation 1."
    ]
   },
   {
@@ -90,6 +122,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Features Selection\n",
+    "To better understand why we selected these specific features for classification, read the **Perceptron_hearts** file.\n",
+    "\n",
+    "We'll select the \"Age\", \"Oldpeak\", \"MaxHR\", \"ST_Slope\", \"ExerciseAngina\", \"Sex\",\"ChestPainType\",\"Cholesterol\", and \"FastingBS\" for classification."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -104,6 +146,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting Data into Training and Test Sets\n",
+    "\n",
+    "We split our dataset into training and testing sets to evaluate model performance later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -111,6 +162,16 @@
    "source": [
     "#Split data into test and trainung data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AdaBoost Regression Implementation\n",
+    "We will implement the **AdaBoost Regression** technique using the **AdaBoostRegressor** from the **sklearn.ensemble** module and the **LinearRegression** from **sklearn.linear_model** \n",
+    "\n",
+    "Here we train our model and predict using the test values"
    ]
   },
   {
@@ -130,6 +191,15 @@
     "\n",
     "# Make predictions\n",
     "ada_y_pred = ada_reg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate the Model Accuracy\n",
+    "\n",
+    "Here we plot a confusion matrix and give a classification report on the model."
    ]
   },
   {
@@ -179,6 +249,13 @@
     "# Classification Report\n",
     "print(\"Classification Report:\")\n",
     "print(classification_report(y_test, y_pred, target_names=['No Disease', 'Disease']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate MSE"
    ]
   },
   {
