--- a/supervised_learning/DecisionTree.ipynb
+++ b/supervised_learning/DecisionTree.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decision Tree: Classifying Heart Disease or No Heart Disease\n",
+    "\n",
+    "## What is a Decision Tree?\n",
+    "\n",
+    "A **Decision Tree** is a model that makes predictions by asking a series of questions, like a flowchart. Each question splits the data based on a feature (like age or cholesterol level), and the tree keeps splitting until it reaches a decision or prediction at the end. It’s easy to understand because it mimics how people make decisions—step by step."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -18,6 +29,27 @@
     "\n",
     "# Set the Seaborn theme\n",
     "sns.set_theme()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Our Task\n",
+    "We will be predicting the occurrence of heart disease in patients using **Decision Tree** technique. This technique will demonstrate how decision trees can be used for binary classification. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Load and Preprocess the Hearts Dataset\n",
+    "We will use the `hearts` dataset and classify a patient as either **Has Heart Disease**(label=1) or **Does not have Heart Disease**(label=0)\n",
+    "\n",
+    "We'll also drop any rows with missing values.\n",
+    "\n",
+    "## Normalize and Prepare Features\n",
+    "Logistic regression works best when the input features are on a similar scale. We'll normalize the features to have mean 0 and standard deviation 1."
    ]
   },
   {
@@ -89,6 +121,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Features Selection\n",
+    "To better understand why we selected these specific features for classification, read the **Perceptron_hearts** file.\n",
+    "\n",
+    "We'll select the \"Age\", \"Oldpeak\", \"MaxHR\", \"ST_Slope\", \"ExerciseAngina\", \"Sex\",\"ChestPainType\",\"Cholesterol\", and \"FastingBS\" for classification."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -103,6 +145,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting Data into Training and Test Sets\n",
+    "\n",
+    "We split our dataset into training and testing sets to evaluate model performance later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -110,6 +161,16 @@
    "source": [
     "#Split data into test and trainung data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decision Tree Implementation\n",
+    "We will implement the **Decision Tree** technique using the **DecisionTreeClassifier** from the **sklearn.tree** module\n",
+    "\n",
+    "Here we train our model."
    ]
   },
   {
@@ -542,6 +603,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Importance in Patient Classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -583,6 +651,15 @@
     "plt.xlabel('Importance')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate the Model Accuracy\n",
+    "\n",
+    "Here we plot a confusion matrix and give a classification report on the model."
    ]
   },
   {
