--- a/supervised_learning/GradientBoosting.ipynb
+++ b/supervised_learning/GradientBoosting.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Boosting: Classifying Heart Disease or No Heart Disease\n",
+    "\n",
+    "## What is Gradient Boosting?\n",
+    "\n",
+    "**Gradient Boosting** is a machine learning technique that builds a strong prediction model by combining many smaller, weaker models—usually decision trees. Each new tree tries to fix the mistakes made by the previous ones. It improves step by step, learning from the errors to make better predictions. Think of it like a group project where each person works on correcting what the last person missed, so the final result keeps getting better."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -16,6 +27,27 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import GradientBoostingClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Our Task\n",
+    "We will be predicting the occurrence of heart disease in patients using **Gradient Boosting** technique. We will be able to improve on the decision tree technique with this.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Load and Preprocess the Hearts Dataset\n",
+    "We will use the `hearts` dataset and classify a patient as either **Has Heart Disease**(label=1) or **Does not have Heart Disease**(label=0)\n",
+    "\n",
+    "We'll also drop any rows with missing values.\n",
+    "\n",
+    "## Normalize and Prepare Features\n",
+    "Logistic regression works best when the input features are on a similar scale. We'll normalize the features to have mean 0 and standard deviation 1."
    ]
   },
   {
@@ -87,6 +119,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Features Selection\n",
+    "To better understand why we selected these specific features for classification, read the **Perceptron_hearts** file.\n",
+    "\n",
+    "We'll select the \"Age\", \"Oldpeak\", \"MaxHR\", \"ST_Slope\", \"ExerciseAngina\", \"Sex\",\"ChestPainType\",\"Cholesterol\", and \"FastingBS\" for classification.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -101,6 +143,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting Data into Training and Test Sets\n",
+    "\n",
+    "We split our dataset into training and testing sets to evaluate model performance later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -108,6 +159,16 @@
    "source": [
     "#Split data into test and trainung data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Boosting Implementation\n",
+    "We will implement the **Gradient Boosting** using the **GradientBoostingClassifier** from the **sklearn.ensemble** module\n",
+    "\n",
+    "Here we train our model and predict using the test values."
    ]
   },
   {
@@ -127,6 +188,13 @@
     "\n",
     "# Make predictions\n",
     "gb_y_pred = gb_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Importance in Patient Classification"
    ]
   },
   {
@@ -174,6 +242,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate Model Accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -218,6 +293,13 @@
     "# Classification Report\n",
     "print(\"Classification Report:\")\n",
     "print(classification_report(y_test, gb_y_pred, target_names=['No Disease', 'Disease']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our model is reasonably accurate."
    ]
   }
  ],
