--- a/supervised_learning/KNN.ipynb
+++ b/supervised_learning/KNN.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## K-Nearest Neighbors (KNN): Classifying Heart Disease or No Heart Disease\n",
+    "\n",
+    "## What is K-Nearest Neighbors (KNN) Classification?\n",
+    "\n",
+    "K-Nearest Neighbors (KNN) is a simple machine learning method used to classify data. When given a new data point, it looks at the ‘k’ closest points from the training data and checks which class they belong to. The new point is then assigned to the class that is most common among its neighbors. It’s like asking your neighbors for advice and going with the majority opinion."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,6 +27,27 @@
     "from mlxtend.plotting import plot_decision_regions\n",
     "from sklearn.metrics import classification_report\n",
     "import heapq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Our Task\n",
+    "We will be predicting the occurrence of heart disease in patients using **K-Nearest Neighbors** technique. We will be able to capture complex regression tasks that our previous regression techniques couldn't do.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Load and Preprocess the Hearts Dataset\n",
+    "We will use the `hearts` dataset and classify a patient as either **Has Heart Disease**(label=1) or **Does not have Heart Disease**(label=0)\n",
+    "\n",
+    "We'll also drop any rows with missing values.\n",
+    "\n",
+    "## Normalize and Prepare Features\n",
+    "Logistic regression works best when the input features are on a similar scale. We'll normalize the features to have mean 0 and standard deviation 1."
    ]
   },
   {
@@ -87,6 +119,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Features Selection\n",
+    "To better understand why we selected these specific features for classification, read the **Perceptron_hearts** file.\n",
+    "\n",
+    "We'll select the \"Age\", \"Oldpeak\", \"MaxHR\", \"ST_Slope\", \"ExerciseAngina\", \"Sex\",\"ChestPainType\",\"Cholesterol\", and \"FastingBS\" for classification.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -101,6 +143,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting Data into Training and Test Sets\n",
+    "\n",
+    "We split our dataset into training and testing sets to evaluate model performance later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -108,6 +159,14 @@
    "source": [
     "#Split data into test and trainung data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## K-Nearest Neighbors Implementation\n",
+    "We will implement the **K-Nearest Neighbors** by the defining the below functions."
    ]
   },
   {
@@ -158,6 +217,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train and Predict the class of heart disease(Yes=1 or No=0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -166,6 +232,16 @@
     "# Make predictions\n",
     "k=3# number of neighbors to consider\n",
     "y_pred = np.array([KNN_Predict(x, X_train, y_train, k, regression=True) for x in X_test])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate the Model Accuracy\n",
+    "\n",
+    "Here we plot a confusion matrix and give a classification report on the model.\n",
+    "We also calculate the MSE for the model"
    ]
   },
   {
@@ -235,6 +311,15 @@
     "mse = mean_squared_error(y_test, y_pred_class)\n",
     "\n",
     "print(f\"Mean Squared Error: {mse:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see our model has an accuracy of about 84%. It is necessary to note that the accuracy of the model also depends on the value of k(number of neighbors to consider) used. I found that a k=10 could yield a better accuracy. You can try this.\n",
+    "\n",
+    "Our model is however still reasonably accurate."
    ]
   }
  ],
