--- a/supervised_learning/Logistic_Regression_SingleNeuron.ipynb
+++ b/supervised_learning/Logistic_Regression_SingleNeuron.ipynb
@@ -44,7 +44,10 @@
     "##  Load and Preprocess the Hearts Dataset\n",
     "We will use the `hearts` dataset and classify a patient as either **Has Heart Disease**(label=1) or **Does not have Heart Disease**(label=0)\n",
     "\n",
-    "We'll also drop any rows with missing values."
+    "We'll also drop any rows with missing values.\n",
+    "\n",
+    "## Normalize and Prepare Features\n",
+    "Logistic regression works best when the input features are on a similar scale. We'll normalize the features to have mean 0 and standard deviation 1."
    ]
   },
   {
@@ -121,8 +124,10 @@
    "id": "78f14671",
    "metadata": {},
    "source": [
-    "## Normalize and Prepare Features\n",
-    "Logistic regression works best when the input features are on a similar scale. We'll normalize the features to have mean 0 and standard deviation 1."
+    "# Features Selection\n",
+    "To better understand why we selected these specific features for classification, read the **Perceptron_hearts** file.\n",
+    "\n",
+    "We'll select the \"Age\", \"Oldpeak\", \"MaxHR\", \"ST_Slope\", \"ExerciseAngina\", \"Sex\",\"ChestPainType\",\"Cholesterol\", and \"FastingBS\" for classification.\n"
    ]
   },
   {
@@ -138,6 +143,15 @@
     "filtered_df= hearts[features].reset_index(drop=True)\n",
     "X = filtered_df[filtered_df.columns.drop(['HeartDisease'])].values\n",
     "y = filtered_df['HeartDisease'].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfb66495",
+   "metadata": {},
+   "source": [
+    "## Split Dataset into Training and Testing Sets\n",
+    "This cell splits the dataset into training and testing subsets using an 80/20 split."
    ]
   },
   {
@@ -376,6 +390,14 @@
     "# Print the report\n",
     "print(\"Classification Report:\\n\")\n",
     "print(report)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ce088d2",
+   "metadata": {},
+   "source": [
+    "As we can see, our implementation has an accuracy of about 84% and the training loss over epochs goes down to a minimum of about 0.35. Our classification is mostly accurate."
    ]
   },
   {
