--- a/supervised_learning/RandomForest.ipynb
+++ b/supervised_learning/RandomForest.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forest: Classifying Heart Disease or No Heart Disease\n",
+    "\n",
+    "## What is Random Forest?\n",
+    "\n",
+    "**Random Forest** is a machine learning method that uses many decision trees to make predictions. Each tree looks at a random part of the data and gives its own answer, and the forest combines all their answers to make a final decision. This helps reduce errors and avoid overfitting. It’s like asking a group of people for their opinion and going with the majority vote or average—they’re usually more accurate together than alone."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -15,6 +26,27 @@
     "from sklearn.preprocessing import MinMaxScaler,StandardScaler,LabelEncoder\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.ensemble import RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Our Task\n",
+    "We will be predicting the occurrence of heart disease in patients using **Random Forest** technique. We will be able to capture non-linear relationships better than our linear regression model.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Load and Preprocess the Hearts Dataset\n",
+    "We will use the `hearts` dataset and classify a patient as either **Has Heart Disease**(label=1) or **Does not have Heart Disease**(label=0)\n",
+    "\n",
+    "We'll also drop any rows with missing values.\n",
+    "\n",
+    "## Normalize and Prepare Features\n",
+    "Logistic regression works best when the input features are on a similar scale. We'll normalize the features to have mean 0 and standard deviation 1."
    ]
   },
   {
@@ -86,6 +118,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Features Selection\n",
+    "To better understand why we selected these specific features for classification, read the **Perceptron_hearts** file.\n",
+    "\n",
+    "We'll select the \"Age\", \"Oldpeak\", \"MaxHR\", \"ST_Slope\", \"ExerciseAngina\", \"Sex\",\"ChestPainType\",\"Cholesterol\", and \"FastingBS\" for classification.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -100,6 +142,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting Data into Training and Test Sets\n",
+    "\n",
+    "We split our dataset into training and testing sets to evaluate model performance later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -107,6 +158,16 @@
    "source": [
     "#Split data into test and trainung data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AdaBoost Regression Implementation\n",
+    "We will implement the **Random Forest** technique using the **RandomForestRegressor** from the **sklearn.ensemble** module \n",
+    "\n",
+    "Here we train our model "
    ]
   },
   {
@@ -540,6 +601,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Importance in Patient Classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -581,6 +649,15 @@
     "plt.xlabel('Importance')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate the Model Accuracy\n",
+    "\n",
+    "Here we plot a confusion matrix and give a classification report on the model."
    ]
   },
   {
@@ -630,6 +707,13 @@
     "# Classification Report\n",
     "print(\"Classification Report:\")\n",
     "print(classification_report(y_test, y_pred_class, target_names=['No Disease', 'Disease']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate MSE"
    ]
   },
   {
