--- a/supervised_learning/neural_network.ipynb
+++ b/supervised_learning/neural_network.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neural Network: Predicting the Occurrence of Heart Disease in Patients\n",
+    "\n",
+    "## What is a Neural Network?\n",
+    "A Neural Network is a type of computer program that tries to learn patterns from data, kind of like how our brains learn. It’s made up of layers of “neurons” that pass information to each other. By looking at lots of examples, the network gets better at making predictions or decisions—like telling if someone has heart disease based on their health data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -18,6 +28,28 @@
     "from sklearn.feature_selection import chi2\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Our Task\n",
+    "We will be predicting the occurrence of heart disease in patients. The use of the Neural Network will be able to capture complex regression tasks that our linear regression couldn't previously do.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f66f75b2",
+   "metadata": {},
+   "source": [
+    "##  Load and Preprocess the Hearts Dataset\n",
+    "We will use the `hearts` dataset and classify a patient as either **Has Heart Disease**(label=1) or **Does not have Heart Disease**(label=0)\n",
+    "\n",
+    "We'll also drop any rows with missing values.\n",
+    "\n",
+    "## Normalize and Prepare Features\n",
+    "Logistic regression works best when the input features are on a similar scale. We'll normalize the features to have mean 0 and standard deviation 1."
    ]
   },
   {
@@ -89,6 +121,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Features Selection\n",
+    "To better understand why we selected these specific features for classification, read the **Perceptron_hearts** file.\n",
+    "\n",
+    "We'll select the \"Age\", \"Oldpeak\", \"MaxHR\", \"ST_Slope\", \"ExerciseAngina\", \"Sex\",\"ChestPainType\",\"Cholesterol\", and \"FastingBS\" for classification.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -103,6 +145,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "865d9f0d",
+   "metadata": {},
+   "source": [
+    "## Splitting Data into Training and Test Sets\n",
+    "\n",
+    "We split our dataset into training and testing sets to evaluate model performance later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -114,12 +166,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"../\")"
+    "sys.path.append(\"../\")# allows the package to be seen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "987a47b5",
+   "metadata": {},
+   "source": [
+    "## Implementation of the Neural Network\n",
+    "\n",
+    "Here we will be using the python package I created. That is my_ml.neural_network which can be found in my_ml folder"
    ]
   },
   {
@@ -246,6 +308,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot Training Loss Over Time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -278,6 +347,16 @@
     "plt.show()\n",
     "\n",
     "print(np.array(net.loss_history).flatten().tolist())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff28426d",
+   "metadata": {},
+   "source": [
+    "## Evaluate Model Performance\n",
+    "\n",
+    "We can calculate the MSE. From the value below, we can see that our mse is relatively small. This means our Neural Network predicts almost accurately the occurrence of heart disease in patients."
    ]
   },
   {
