--- a/unsupervised_learning/PCA.ipynb
+++ b/unsupervised_learning/PCA.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA (Principal Component Analysis):Analyzing Attributes of Patients\n",
+    "\n",
+    "## What is PCA (Principal Component Analysis)?\n",
+    "\n",
+    "PCA is a technique used to simplify large datasets by keeping only the most important information. It finds new axes (called principal components) that capture the most variation in the data and uses them to create a smaller, easier-to-work-with version of the data. Think of it like turning a messy, high-dimensional picture into a clear snapshot that still shows the main idea.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,6 +23,15 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler,StandardScaler,LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation of the PCA Algorithm\n",
+    "\n",
+    "Here I will implement the PCA algorithm using the **PCA** Class"
    ]
   },
   {
@@ -56,6 +76,19 @@
     "    \n",
     "    def fit_transform(self, X):\n",
     "        return self.fit(X).transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Load and Preprocess the Hearts Dataset\n",
+    "We will use the `hearts` dataset and classify a patient as either **Has Heart Disease**(label=1) or **Does not have Heart Disease**(label=0)\n",
+    "\n",
+    "We'll also drop any rows with missing values.\n",
+    "\n",
+    "## Normalize and Prepare Features\n",
+    "Logistic regression works best when the input features are on a similar scale. We'll normalize the features to have mean 0 and standard deviation 1."
    ]
   },
   {
@@ -127,8 +160,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Features Selection \n",
+    "Unlike the **Supervised Learning** techniques, unsupervised learning finds natural groupings or trends in data. Hence we do not need to test with **HeartDisease** values.\n",
+    "\n",
+    "To better understand why we selected these specific features for classification, read the **Perceptron_hearts** file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,6 +191,13 @@
     "]\n",
     "filtered_df= hearts[features].reset_index(drop=True)\n",
     "X = filtered_df.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fit PCA model"
    ]
   },
   {
@@ -182,6 +232,13 @@
     "print(\"Explained variance percentage by each component:\")\n",
     "for i, var in enumerate(per_var):\n",
     "    print(f\"PC{i+1}: {var}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyze Graphic of results"
    ]
   },
   {
@@ -221,6 +278,13 @@
     "plt.colorbar(scatter, label='Heart Disease (0 = No, 1 = Yes)')\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyze Feature Contributions"
    ]
   },
   {
