--- a/unsupervised_learning/KMeansClustering.ipynb
+++ b/unsupervised_learning/KMeansClustering.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## K-Means Clustering: Analyzing Attributes of Patients\n",
+    "\n",
+    "## What is K-Means Clustering?\n",
+    "\n",
+    "**K-Means Clustering** is a way to group data into clusters based on how similar the items are. It works by picking k centers, then assigning each point to the closest center. The centers keep moving until the groups stop changing. It’s like organizing a group of people into teams based on who’s standing closest together."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -12,6 +23,27 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler,StandardScaler,LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Our Task\n",
+    "We will implement k-means clustering to group patients based on their attributes, potentially discovering natural groupings in attributes that may have pose a trend in heart disease occurrence.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Load and Preprocess the Hearts Dataset\n",
+    "We will use the `hearts` dataset and classify a patient as either **Has Heart Disease**(label=1) or **Does not have Heart Disease**(label=0)\n",
+    "\n",
+    "We'll also drop any rows with missing values.\n",
+    "\n",
+    "## Normalize and Prepare Features\n",
+    "Logistic regression works best when the input features are on a similar scale. We'll normalize the features to have mean 0 and standard deviation 1."
    ]
   },
   {
@@ -83,6 +115,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Features Selection \n",
+    "Unlike the **Supervised Learning** techniques, unsupervised learning finds natural groupings or trends in data. Hence we do not need to test with **HeartDisease** values.\n",
+    "\n",
+    "To better understand why we selected these specific features for classification, read the **Perceptron_hearts** file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -118,6 +160,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation of the K-Means Clustering Algorithm\n",
+    "\n",
+    "Here we will be using the python package I created. That is my_ml.k_means which can be found in my_ml folder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -128,6 +179,13 @@
     "# Initialize and fit KMeans\n",
     "kmeans = KMeans(num_clusters=2)\n",
     "labels = kmeans.fit(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cluster Graph"
    ]
   },
   {
