--- a/supervised_learning/Perceptron_Penguins_new.ipynb
+++ b/supervised_learning/Perceptron_Penguins_new.ipynb
@@ -89,12 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load and process dataset with updated features and labels\n",
-    "penguins = pd.read_csv(\"penguins.csv\")\n",
+    "penguins = pd.read_csv(\"/Users/kene_2x/Desktop/CMOR 438: DS and Machine Learning/Untitled/Kene_CMOR_438_Spring_25/data/penguins.csv\")\n",
     "penguins = penguins.dropna()\n",
     "penguins = penguins[penguins['species'].isin(['Adelie', 'Gentoo'])]\n",
     "\n",
