--- a/supervised_learning/linear_regression_penguins.ipynb
+++ b/supervised_learning/linear_regression_penguins.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 120,
    "id": "56539f7f",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 121,
    "id": "62b21d9f",
    "metadata": {},
    "outputs": [
@@ -102,13 +102,13 @@
        "[146 rows x 7 columns]>"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"penguins.csv\")\n",
+    "data = pd.read_csv(\"/Users/kene_2x/Desktop/CMOR 438: DS and Machine Learning/Untitled/Kene_CMOR_438_Spring_25/data/penguins.csv\")\n",
     "penguins_df=data.copy(deep = True)\n",
     "penguins_df = penguins_df.dropna()\n",
     "penguins_df=penguins_df[(penguins_df['species']==\"Adelie\")]\n",
