--- a/supervised_learning/KNN.ipynb
+++ b/supervised_learning/KNN.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
    ],
    "source": [
     "# Load and process the heart dataset \n",
-    "data = pd.read_csv(\"heart.csv\")\n",
+    "data = pd.read_csv(\"/Users/kene_2x/Desktop/CMOR 438: DS and Machine Learning/Untitled/Kene_CMOR_438_Spring_25/data/heart.csv\")\n",
     "hearts = data.copy(deep = True)\n",
     "\n",
     "le = LabelEncoder()#Label Encoding\n",
